feat: cyber patricorp ind

--- a/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
+++ b/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
@@ -52,6 +52,7 @@ l_english:
 	building_tec_leader_building_commander_tag: "§E$building_tec_leader_building_tag$ ($tec_loc_leader_commander$)§!"
 	building_tec_research_building_tag: "['concept_tec_research_building']"
 	building_tec_unity_building_tag: "['concept_tec_unity_building']"
+	building_tec_monument_building_tag: "['concept_tec_monument_building']"
 	building_tec_temple_building_tag: "['concept_tec_temple_building']"
 	building_tec_amenity_building_tag: "['concept_tec_amenity_building']"
 	building_tec_healthcare_building_tag: "['concept_tec_healthcare_building']"
@@ -1621,6 +1622,14 @@ l_english:
 	mod_job_tec_corpo_chancellor_per_pop_short:0 "\n§G+1§! £mod_job_tec_corpo_chancellor_add£ per $VALUE$ £pop£"
 	mod_job_tec_corpo_chancellor_add:0 "$job_tec_corpo_chancellor$ Jobs"
 
+
+	job_tec_cyber_idol:0 "Cyber-Idol"
+	job_tec_cyber_idol_plural:0 "$job_tec_cyber_idol$s"
+	job_tec_cyber_idol_desc:0 "A cybernetically enhanced celebrity figure of the ruling corporate dynasty. These living brand ambassadors leverage their augmented charisma and real-time market insights to drive consumer behavior and shape corporate culture, blurring the lines between governance, entertainment, and commerce."
+	job_tec_cyber_idol_desc_effect:0 "£job_tec_technocrat£ §Y$job_tec_cyber_idol_plural$§! generates §Y$tec_loc_unity$§!, §Y$tec_loc_trade_value$§! and a tiny bit of §Y$tec_loc_influence$§!, while having elevated §Y$tec_loc_happiness$§! and §Y$tec_loc_political_power$§!. They also boost §Y$tec_loc_trade_value$§! from §BCyborg§! §Y$tec_loc_pops$§! at the expense of some §Y$tec_loc_consumer_goods$§!."
+	mod_job_tec_cyber_idol_per_pop:0 "§G+1§! $job_tec_cyber_idol$ Job Per $VALUE$ Pops"
+	mod_job_tec_cyber_idol_per_pop_short:0 "\n§G+1§! £mod_job_tec_technocrat_add£ per $VALUE$ £pop£"
+	mod_job_tec_cyber_idol_add:0 "$job_tec_cyber_idol$ Jobs"
  # /
 
  # ------------------------------------------------- Archive curators
@@ -3812,6 +3821,8 @@ l_english:
 	mod_tec_criminal_lifestyle_trade_value_add: "$tec_loc_trade_value$ from $mod_base_planet_criminals$"
 	mod_tec_unemployed_lifestyle_trade_value_add: "$tec_loc_trade_value$ from $mod_base_unemployment_resources$"
 	mod_tec_pop_lifestyle_trade_value_add: "$tec_loc_trade_value$ from £pop£ Pops"
+	mod_tec_cyborg_lifestyle_trade_value_add: "$tec_loc_trade_value$ from §BCyborg§! £pop£ Pops"
+
 	mod_tec_planet_automation_mult: "£trigger_tec_automation£ Automated Production Output"
 	mod_tec_tech_rare_draw_chance_mult: "Chance for §MRare§! Research Options"
 	mod_tec_tech_blocks_neighbour_spread: "Blocks Technology Spread to §YNeighbour§! £empire£ Empires"
