--- a/localisation/english/replace/zz_evolved_ethics_authorities_l_english.yml
+++ b/localisation/english/replace/zz_evolved_ethics_authorities_l_english.yml
@@ -111,13 +111,13 @@
 
 	TEC_AUTH_PATROCORPORATE_TYPES: "['concept_tec_authority_type_autocratic'], ['concept_tec_authority_type_imperial'], ['concept_tec_authority_type_corporate_type']"
 
-	auth_cyber_tec_patrocorporate_individualist: "AI-Corporate Neuromarkets"
-	auth_cyber_tec_patrocorporate_individualist_desc: "By leveraging our AI administration's vast data processing capabilities, we've developed a hyper-personalized neuromarketing system. Each citizen's cybernetic implants interface directly with our corporate AI, allowing for real-time, individualized product suggestions and service optimizations.\n\nHowever, the deep integration of AI into personal neural networks may lead to concerns about data privacy and cognitive autonomy."
-	auth_cyber_tec_patrocorporate_individualist_tt: "$unlock_edict_tt$ ['concept_tec_edict_tec_neuro_markets']"
+	auth_cyber_tec_patrocorporate_individualist: "Patrimonial Corporate Cyberbrand"
+	auth_cyber_tec_patrocorporate_individualist_desc: "The ruling family has become a living advertisement for cybernetic enhancement, each member showcasing cutting-edge implants that blend business acumen with celebrity appeal.\n\nThese augmented scions drive both corporate policy and consumer trends, encouraging the populace to emulate their cybernetic upgrades. While this creates a lucrative market for company-produced implants, it also raises concerns about social inequality as people struggle to keep up with the latest enhancements."
+	auth_cyber_tec_patrocorporate_individualist_tt: "['concept_tec_monument_buildings'] provide additional ['concept_tec_ruler_job_tec_cyber_idol_plural_icon'] Jobs, scaling with §Y$tec_loc_planet_ascensions$§!\n$unlock_edict_tt$ ['concept_tec_edict_tec_idolware_initiative']"
 
 
-	auth_cyber_tec_patrocorporate_collectivist: "AI-Corporate Neuralnet"
-	auth_cyber_tec_patrocorporate_collectivist_desc: "Our AI administration has implemented a pervasive system of neural integration across our entire corporate structure. Through mandatory cybernetic implants, the collective cognitive capacity of our workforce and consumer base is continuously mined for valuable data and processing power.\n\nWhile corporate profits have skyrocketed, concerns about privacy invasion and mental fatigue are routinely dismissed as 'growing pains'."
+	auth_cyber_tec_patrocorporate_collectivist: "Patrimonial Corporate Cyberhouseholds"
+	auth_cyber_tec_patrocorporate_collectivist_desc: "The ruling family has restructured society into a network of cybernetically-linked "houses," each aspiring to emulate the success of the central dynasty.\n\nThis system promotes fierce loyalty and competition, with the promise that any household could rise to prominence through dedication to the corporation. This divide-and-conquer strategy effectively redirects ambition and discontent away from the core dynasty, ensuring their continued dominance in the corporate hierarchy."
 	auth_cyber_tec_patrocorporate_collectivist_tt: "$unlock_edict_tt$ ['concept_tec_edict_tec_idle_mind_networking']"
 
 	auth_tec_ai:0 "AI Administration"
