--- a/localisation/english/replace/zz_evolved_traits_l_english.yml
+++ b/localisation/english/replace/zz_evolved_traits_l_english.yml
@@ -1422,6 +1422,9 @@
 	trait_tec_cyborg_deck_amenities:0 "Fabrication Database"
 	trait_tec_cyborg_deck_amenities_desc:0 "§LThis repository provide the mechanical knowledge necessary for better operation of industrial production.§!"
 	trait_tec_cyborg_deck_amenities_effect:0 "§YTODO ASCENSION§!"
+
+	trait_tec_cyborg_idol_implants: "Idolware Implants"
+	trait_tec_cyborg_idol_implants_desc: "Cybernetic enhancements modeled after those of the Cyber-Idols. These augments boost cultural engagement, while also driving increased consumption and a desire for social influence."
 # /
 
 # ------------------------------------------------- BIONICS
