--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -105,6 +105,7 @@
 	tec_loc_crime: "£crime£ $PLANET_CRIME_TITLE$"
 	tec_loc_crime_gestalt: "£crime£ $MOD_PLANET_CRIME_NO_HAPPINESS_MULT$"
 	tec_loc_happiness: "£happiness£ $MOD_POP_HAPPINESS$"
+	tec_loc_political_power: "£political_power£ $MOD_POP_POLITICAL_POWER$"
 	tec_loc_opinion: "£opinion£ Opinion"
 
 	tec_loc_devastation:0 "£tec_devastation£ $PLANET_DEVASTATION$"
@@ -544,6 +545,7 @@ TEC_FRAGMENT_NODE: "Finish Fragmentation"
 
 tec_loc_empire_scope_effects: "£empire£ §YEmpire§!"
 tec_loc_planet_scope_effects: "£planet£ §YPlanet§!"
+tec_loc_pop_scope_effects: "£pop£ §YPop§!"
 tec_loc_science_ship_scope_effects: "£planet£ §YPlanet§!"
 
 tec_cui_tec_no_ai_empire_leader_loc: "Leader"
