--- a/localisation/english/zz_evolved_edict_policies_l_english.yml
+++ b/localisation/english/zz_evolved_edict_policies_l_english.yml
@@ -1572,3 +1572,7 @@ edict_tec_neuro_markets_tt: "$tec_loc_planet$s with ['building:building_tec_plan
 
 edict_tec_idle_mind_networking: "Idle Mind Networking"
 edict_tec_idle_mind_networking_desc: "Implement a program to "repurpose" the cognitive capacity of our unemployed population. By providing free neural implants and network access, we offer the jobless a chance to contribute to society through passive mental computations. This initiative taps into an previously unutilized resource pool, allowing our AI to harness vast amounts of processing power for its daily duties, data analysis, and even cryptocurrency mining."
+
+edict_tec_idolware_initiative: "Idolware Initiative"
+edict_tec_idolware_initiative_desc: "Launch a massive marketing campaign promoting our Cyber-Idols' signature augmentations. This initiative will gradually outfit our population with idol-grade cybernetics, reshaping our society in the image of our corporate dynasty."
+edict_tec_idolware_initiative_tt: "$tec_loc_pops$ working ['concept_tec_ruler_job_tec_cyber_idol_icon'] Jobs get the ['trait:trait_tec_cyborg_idol_implants'] Trait\nOther §Y$tec_loc_pops$§! will slowly acquire this Trait too"
