--- a/localisation/english/zz_evolved_concepts_l_english.yml
+++ b/localisation/english/zz_evolved_concepts_l_english.yml
@@ -282,7 +282,13 @@
 	concept_tec_unity_building_icon: "£unity£ Administrative Building"
 	concept_tec_unity_buildings: "Administrative Buildings"
 	concept_tec_unity_buildings_icon: "£unity£ Administrative Buildings"
-	concept_tec_unity_building_desc: "Administrative Buildings are §Y£building£ Buildings§! that give §Y$tec_loc_unity$§! Jobs such as ['concept_tec_specialist_job_bureaucrat_plural_icon'], ['concept_tec_specialist_job_coordinator_plural_icon'] or ['concept_tec_specialist_job_tec_resonance_drone_plural_icon'].\n\n$concept_tec_unity_building$ ($job_bureaucrat_with_icon$):\n$t$- ['building:building_bureaucratic_1']\n$t$- ['building:building_tec_aiauth_1']\n$t$- ['building:building_fe_administration_1']\n$concept_tec_unity_building$ (£job_tec_resonance_drone£ $job_tec_resonance_drone$):\n$t$- ['building:building_hive_node']\n$t$- ['building:building_tec_cyberhive_node']\n$t$- ['building:building_tec_biohive_node']\n$t$- ['building:building_fe_administration_hive_1']\n$concept_tec_unity_building$ (£job_evaluator£ $job_evaluator$):\n$t$- ['building:building_uplink_node']\n$t$- ['building:building_fe_administration_machine_1']\n$concept_tec_unity_building$ (Special):\n$t$- ['building:building_organic_sanctuary']\n$t$- ['building:building_tec_memorialist_site_1']"
+	concept_tec_unity_building_desc: "Administrative Buildings are §Y£building£ Buildings§! that give §Y$tec_loc_unity$§! Jobs such as ['concept_tec_specialist_job_bureaucrat_plural_icon'], ['concept_tec_specialist_job_coordinator_plural_icon'] or ['concept_tec_specialist_job_tec_resonance_drone_plural_icon'].\n\n$concept_tec_unity_building$ ($job_bureaucrat_with_icon$):\n$t$- ['building:building_bureaucratic_1']\n$t$- ['building:building_tec_aiauth_1']\n$t$- ['building:building_fe_administration_1']\n$concept_tec_unity_building$ (£job_tec_resonance_drone£ $job_tec_resonance_drone$):\n$t$- ['building:building_hive_node']\n$t$- ['building:building_tec_cyberhive_node']\n$t$- ['building:building_tec_biohive_node']\n$t$- ['building:building_fe_administration_hive_1']\n$concept_tec_unity_building$ (£job_coordinator£ $job_coordinator$):\n$t$- ['building:building_uplink_node']\n$t$- ['building:building_fe_administration_machine_1']\n$concept_tec_unity_building$ (Special):\n$t$- ['building:building_organic_sanctuary']\n$t$- ['building:building_tec_memorialist_site_1']"
+
+	concept_tec_monument_building: "Monument Building"
+	concept_tec_monument_building_icon: "£job_culture_worker£ Monument Building"
+	concept_tec_monument_buildings: "Monument Buildings"
+	concept_tec_monument_buildings_icon: "£job_culture_worker£ Monument Buildings"
+	concept_tec_monument_building_desc: "Monument Buildings are §Y£building£ Buildings§! that give §Y$tec_loc_unity$§! Jobs which adapt to your §YEthics§!, such as ['concept_tec_specialist_job_culture_worker_plural_icon'] or ['concept_tec_specialist_job_evaluator_plural_icon'] .\n\n$concept_tec_monument_building$ ($job_culture_worker_name_plural_with_icon$):\n$t$- ['building:building_autochthon_monument']\n$t$- ['building:building_corporate_monument']\n$concept_tec_monument_building$ (£job_evaluator£ $job_evaluator$):\n$t$- ['building:building_sensorium_1']\n$t$- ['building:building_tec_cyberhive_relay_1']\n$t$- ['building:building_tec_biohive_relay_1']\n$t$- ['building:building_simulation_1']\n$concept_tec_monument_building$ (Special):\n$t$- ['building:building_galactic_memorial_1']"
 
 	concept_tec_temple_building: "Temple Building"
 	concept_tec_temple_building_icon: "£job_priest£ Temple Building"
@@ -1571,6 +1577,12 @@
 	concept_tec_worker_job_tec_state_worker_plural_icon: "£job_tec_state_worker£ $job_tec_state_worker_plural$"
 	concept_tec_worker_job_tec_state_worker_desc: "TODO"
 
+	concept_tec_ruler_job_tec_cyber_idol: "$job_tec_cyber_idol$"
+	concept_tec_ruler_job_tec_cyber_idol_icon: "£job_tec_technocrat£ $job_tec_cyber_idol$"
+	concept_tec_ruler_job_tec_cyber_idol_plural: "$job_tec_cyber_idol_plural$"
+	concept_tec_ruler_job_tec_cyber_idol_plural_icon: "£job_tec_technocrat£ $job_tec_cyber_idol_plural$"
+	concept_tec_ruler_job_tec_cyber_idol_desc: "§L$job_tec_cyber_idol_desc$§!\n\n$job_tec_cyber_idol_effect_desc$\n\n$tec_loc_c_stratum$: §Y$pop_cat_ruler$§!\n$tec_loc_c_eco_cat$: ['concept_tec_eco_planet_culture_workers_alias_icon']\n\n$tec_loc_planet_scope_effects$ Modifiers:\n$t$- $mod_tec_cyborg_lifestyle_trade_value_add$: §G+0.05§!\n$t$- $mod_pop_category_cyborgs_normal_resources_consumer_goods_upkeep_add$: §R+0.05§!\n$tec_loc_pop_scope_effects$ Modifiers:\n$t$- $tec_loc_political_power$: §Y+4§!\n$t$- $tec_loc_happiness$: §G+50%§!\n$tec_loc_trade_value$: §G+$@tec_mogul_trade$§!\n$tec_loc_c_produces$: §Y£unity£ $@tec_ruler_job_unity_low$ £influence£ 0.025§!\n$tec_loc_c_upkeep$: §Y£consumer_goods£ $@tec_ruler_job_upkeep$ £energy£ $@tec_ruler_job_upkeep$§!"
+
 
 
 	# Bureaucrats
@@ -2064,6 +2076,12 @@
 	concept_tec_edict_tec_idle_mind_networking_alias: "$edict_tec_idle_mind_networking$"
 	concept_tec_edict_tec_idle_mind_networking_icon: "£edict£ $edict_tec_idle_mind_networking$ Edict"
 	concept_tec_edict_tec_idle_mind_networking_alias_icon: "£edict£ $edict_tec_idle_mind_networking$"
+
+	concept_tec_edict_tec_idolware_initiative: "$edict_tec_idolware_initiative$ Edict"
+	concept_tec_edict_tec_idolware_initiative_alias: "$edict_tec_idolware_initiative$"
+	concept_tec_edict_tec_idolware_initiative_icon: "£edict£ $edict_tec_idolware_initiative$ Edict"
+	concept_tec_edict_tec_idolware_initiative_alias_icon: "£edict£ $edict_tec_idolware_initiative$"
+
  # /
  # Policy
 	concept_tec_ethic_policy: "Ethic Policy"
