--- a/localisation/english/replace/!_evolved_to_do_l_english.yml
+++ b/localisation/english/replace/!_evolved_to_do_l_english.yml
@@ -980,22 +980,27 @@ TRAIT_TEC_TEST_SCRIPVAR_EFFECT:0 "$tec_test_scripvar_bonus$"
 
 	trait_tec_predatory_evolution:0 "Predatory Evolution"
 	trait_tec_predatory_evolution_desc:0 "§LThe strong feast on the weak, the new prey on the old; for this species, the constant cycle of life and death is manifested in a perpetual hunt of those whom they replace.§!"
-	trait_tec_predatory_evolution_effect:0 "Each time a pop of this species is §YGenerated§!, there is between a §G10%§! and §G30%§! chance, proportional to the number of pops on the planet, of another pop being §R£job_purge Consumed§!, making the new pop gain a permanent §G$tec_loc_job$ Boost§!.\nLivestock, non predatory pops, xeno pops and weak pops will be preyed upon more regularly than other pops; consumed pops are considered as §R£job_purge Purged§!."
+	trait_tec_predatory_evolution_effect:0 "$tec_identity_trait$\n\nEach time a pop of this species is §YGenerated§!, there is between a §G10%§! and §G30%§! chance, proportional to the number of pops on the planet, of another pop being ['concept_tec_predatory_evolution', §R£job_purge Consumed§!]."
+
+ 	concept_tec_predatory_evolution:0 "Consumed"
+	concept_tec_predatory_evolution_icon:0 "§R£job_purge Consumed§!"
+	concept_tec_predatory_evolution_help_icon:0 "£trigger_tec_question£"
+	concept_tec_predatory_evolution_desc:0 "The pop will instantly die, adding a permanent §G+50%§! $tec_loc_job_output$ to the predator pop.\nConsumption can only be done amongsts pops of an archetype group (such as organics consuming organics but not lithoids) or including artificial parts for cybernetic organisms.\n\nConsumed pops are considered as §R£job_purge Purged§!.\n\n§YLivestock, non predatory pops, xeno pops and weak pops will be preyed upon more regularly than other pops.§!\n"
 
 	pop_modifier_trait_tec_predatory_evolution:0 "$trait_tec_predatory_evolution$"
 	pop_modifier_trait_tec_predatory_evolution_desc:0 "The strong feast on the weak, the new prey on the old"
 
 	trait_tec_spore_growth:0 "Sporangic Propagation"
 	trait_tec_spore_growth_desc:0 "§LBy dispersing millions of microscopic corpuscles, of which many are able to thrive due to condition, compatibility or coincidence, this species reproduce incredibly fast.§!"
-	trait_tec_spore_growth_effect:0 "Each pop increases $tec_loc_pop_growth$ on the planet by §G0.33%§!\n\n$tec_loc_pops$ $tec_loc_basic_resources$ Upkeep: §R+0.20§!"
+	trait_tec_spore_growth_effect:0 "$tec_identity_trait$\n\nEach pop increases $tec_loc_pop_growth$ on the planet by §G0.33%§!\n\n$tec_loc_pops$ $tec_loc_basic_resources$ Upkeep: §R+0.20§!"
 
 	trait_tec_dual_gametoids:0 "Dual Gametoids"
 	trait_tec_dual_gametoids_desc:0 "§LEvolutionary adaptations made this species produce several mirroring embryos, which led to explosive population growth due to multiple viable offsprings per reproductive cycle.§!"
-	trait_tec_dual_gametoids_effect:0 "Each time a pop of this species is §YGenerated§!, there is between a §G10%§! and §G30%§! chance of another pop being §Y£mod_pop_growth_speed£ Created§!, proportional to the number of pops on the planet."
+	trait_tec_dual_gametoids_effect:0 "$tec_identity_trait$\n\nEach time a pop of this species is §YGenerated§!, there is between a §G10%§! and §G30%§! chance of another pop being §Y£mod_pop_growth_speed£ Created§!, proportional to the number of pops on the planet."
 
 	trait_tec_celestial_panspermia:0 "Celestial Panspermia"
 	trait_tec_celestial_panspermia_desc:0 "§LAn anomalous biological development made this species generate a propagation effect when reproducing, manifesting their kind in far away regions or even entire celestial-grade distances, dispersing their genes and generating new life. The mysteries of life, unquestionable as always.§!"
-	trait_tec_celestial_panspermia_effect:0 "Each time a pop of this species is §YGenerated§!, there is a §G20%§! chance of a close-by or far-away planet gains a clearable $tec_loc_blocker$, which generates §G1§! biological $tec_loc_pop$ with this trait."
+	trait_tec_celestial_panspermia_effect:0 "$tec_identity_trait$\n\nEach time a pop of this species is §YGenerated§!, there is a §G20%§! chance of a close-by or far-away planet gains a clearable $tec_loc_blocker$, which generates §G1§! biological $tec_loc_pop$ with this trait."
 
 	d_tec_celestial_organic:0 "Celestial Pod"
 	d_tec_celestial_organic_desc:0 "This strange organic pod is growing by absorbing nearby inert materials and residual energy, life can be sensed thriving on its interior."
@@ -1019,7 +1024,12 @@ TRAIT_TEC_TEST_SCRIPVAR_EFFECT:0 "$tec_test_scripvar_bonus$"
 
 	trait_tec_decaying_decomposition:0 "Decaying Decomposition"
 	trait_tec_decaying_decomposition_desc:0 "§LThe cycle of death and life is deeply bound to this species, as their body rapidly decays and become a source of new life.§!"
-	trait_tec_decaying_decomposition_effect:0 "Each time a pop of this species is §YGenerated§!, there is between a §G10%§! and §G30%§! chance, proportional to the number of pops on the planet, for another pop to instantly §R£job_purge Wither§!, adding a permanent §Y$tec_loc_deposit$§! to the planet.\nEffects of the decayed deposit vary on the type of species. ($tec_loc_food_icon$ $tec_loc_minerals_icon$)\n\nPops killed due to Purges, Planetary Bombardments or Rituals are considered as §R£job_purge Withered§!."
+	trait_tec_decaying_decomposition_effect:0 "$tec_identity_trait$\n\nEach time a pop of this species is §YGenerated§!, there is between a §G10%§! and §G30%§! chance, proportional to the number of pops on the planet, for another pop to instantly ['concept_tec_decaying_decomposition', §R£job_purge Wither§!].\n\nPops killed due to Purges, Planetary Bombardments or Rituals are considered as §R£job_purge Withered§!."
+
+ 	concept_tec_decaying_decomposition:0 "Withering Decomposition"
+	concept_tec_decaying_decomposition_icon:0 "§R£job_purge§!"
+	concept_tec_decaying_decomposition_help_icon:0 "£trigger_tec_question£"
+	concept_tec_decaying_decomposition_desc:0 "The pop will instantly die, adding a permanent §Y$tec_loc_deposit$§! to the planet.\nEffects of the decayed deposit vary on the type of species. ($tec_loc_food_icon$ $tec_loc_minerals_icon$)"
 
 	d_tec_decomposition_robotic:0 "Obsolescence Junkyard"
 	d_tec_decomposition_robotic_desc:0 "An enormous deposit of previous and discarded robotic models, serving as a repository for materials, pieces and overall replacements for new and better uses."
@@ -1027,6 +1037,15 @@ TRAIT_TEC_TEST_SCRIPVAR_EFFECT:0 "$tec_test_scripvar_bonus$"
 	d_tec_decomposition_lithoid_desc:0 "Rich veins of minerals are formed from the decayed remains of lithoid species, creating entire new mountains over time ready for mining operations"
 	d_tec_decomposition_organic:0 "Decayed Bog"
 	d_tec_decomposition_organic_desc:0 "An amalgamation of rich biomass created as byproduct of the disintegration of certain organics, where life can flourish once more from death."
+
+	trait_tec_zombification:0 "Necrotic Zombification"
+	trait_tec_zombification_desc:0 "§LDeath doesn't mean an end for this species, as part of its population raise after its demise, haunting and preying upon the living or serving as mindless workforce, driven by the most basic instincts.§!"
+	trait_tec_zombification_effect:0 "$tec_identity_trait$\n\nEach time a pop of this species is §YGenerated§!, there is between a §G10%§! and §G30%§! chance, proportional to the number of Zombie pops on the planet, for succumb to['concept_tec_zombification_icon', §R£job_purge Zombification§!] instantly.\n\nAllows the recruitment of §R£job_purge£ Feral Zombies§! armies."
+
+ 	concept_tec_zombification:0 "Zombification"
+	concept_tec_zombification_icon:0 "§R£job_purge Zombification§!"
+	concept_tec_zombification_help_icon:0 "£trigger_tec_question£"
+	concept_tec_zombification_desc:0 "The affected pop will gain the ['trait:trait_zombie'] trait.\nIn some ocassions, the pops will intantly die instead."
 
 
 	trait_tec_positive_thoughts:0 "Positivist"
@@ -1059,7 +1078,31 @@ TRAIT_TEC_TEST_SCRIPVAR_EFFECT:0 "$tec_test_scripvar_bonus$"
 	trait_tec_inefficient_desc:0 "§LA waste of resources is done by members of this species for achieving their desired labour, acting in a really messy way when it comes to administrating whats needed for it.§!"
 	trait_tec_inefficient_effect:0 ""
 
-	# Produces
+	# Big&Smol
+	trait_tec_size_titanic:0 "Titanic"
+	trait_tec_size_titanic_desc:0 "§LThe sheer size of this species tower over most creatures, each individual compending a true force of nature on itself.§!"
+	trait_tec_size_titanic_effect:0 "TODO allows the recruitment of titanic armies."
+
+	trait_tec_size_giant:0 "Giant"
+	trait_tec_size_giant_desc:0 "§LThis species is characterized by its immense proportions and size, being bigger than the overall creature and thus manifesting generally a increased endurance and strenght.§!"
+	trait_tec_size_giant_effect:0 ""
+
+	trait_tec_size_small:0 "Small"
+	trait_tec_size_small_desc:0 "§LWith a more packed size, this species tend to be tiny and evasive.§!"
+	trait_tec_size_small_effect:0 ""
+
+	trait_tec_size_diminute:0 "Diminute"
+	trait_tec_size_diminute_desc:0 "§LWether has been due to evolutionary constraints, conditions or sheer luck, this species has a really small size, occuping very small spaces and having a lower physical capacity as consequence.§!"
+	trait_tec_size_diminute_effect:0 ""
+
+
+	trait_tec_smol_brain:0 "Neuronic Disjunction"
+	trait_tec_smol_brain_desc:0 "§LThe connectivity of this species neural system is highly inefficient, if not severed, which makes thought and rational processes incredibly difficult.§!"
+	trait_tec_smol_brain_effect:0 ""
+
+	trait_tec_big_brain:0 "Oversized Encephalon"
+	trait_tec_big_brain_desc:0 "§LA massive cerebral matter is a common characteristic of this species, allowing more neural density without sacrifficing communication.§!"
+	trait_tec_big_brain_effect:0 ""
 
 	# Upkeeps
 	trait_tec_ravenous:0 "Ravenous"
