--- a/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
+++ b/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
@@ -3835,6 +3835,11 @@ l_english:
 	mod_tec_planet_jobs_energy_produces_mult_per_pop: "$tec_loc_energy$ from $tec_loc_jobs$"
 	mod_tec_planet_jobs_minerals_produces_mult_per_pop: "$tec_loc_minerals$ from $tec_loc_jobs$"
 	mod_tec_planet_jobs_food_produces_mult_per_pop: "$tec_loc_food$ from $tec_loc_jobs$"
+	# Research
+	mod_tec_planet_jobs_researcher_produces_mult_per_pop:0 "Researcher Output"
+	mod_tec_planet_jobs_researcher_upkeep_mult_per_pop:0 "Researcher Upkeep"
+	mod_tec_planet_jobs_administrators_produces_mult_per_pop:0 "Administrator Output"
+	mod_tec_planet_jobs_administrators_upkeep_mult_per_pop:0 "Administrator Upkeep"
 
 	mod_tec_planet_stability_add_per_pop: "$tec_loc_stability$ from £pop£ Pops"
  # Growth
