--- a/localisation/english/zz_evolved_concepts_l_english.yml
+++ b/localisation/english/zz_evolved_concepts_l_english.yml
@@ -1330,7 +1330,7 @@
 
 	concept_tec_worker_job_miner: "$job_miner$"
 	concept_tec_worker_job_miner_icon: "£job_miner£ $job_miner$"
-	concept_tec_worker_job_miner_plural: "job_miner_plural$"
+	concept_tec_worker_job_miner_plural: "$job_miner_plural$"
 	concept_tec_worker_job_miner_plural_icon: "£job_miner£ $job_miner_plural$"
 	concept_tec_worker_job_miner_desc: "§L$job_miner_desc$§!\n\n$job_miner_effect_desc$\n\n$tec_loc_c_stratum$: §Y$tec_loc_pop_cat_worker$§!\n$tec_loc_c_eco_cat$: ['concept_tec_eco_planet_sr_miners_alias_icon']\n\n$tec_loc_c_produces$: §Y£minerals£ 4§!"
 
