--- a/localisation/english/replace/!_evolved_to_do_l_english.yml
+++ b/localisation/english/replace/!_evolved_to_do_l_english.yml
@@ -992,15 +992,15 @@ TRAIT_TEC_TEST_SCRIPVAR_EFFECT:0 "$tec_test_scripvar_bonus$"
 
 	trait_tec_spore_growth:0 "Sporangic Propagation"
 	trait_tec_spore_growth_desc:0 "§LBy dispersing millions of microscopic corpuscles, of which many are able to thrive due to condition, compatibility or coincidence, this species reproduce incredibly fast.§!"
-	trait_tec_spore_growth_effect:0 "$tec_identity_trait$\n\nEach pop increases $tec_loc_pop_growth$ on the planet by §G0.33%§!\n\n$tec_loc_pops$ $tec_loc_basic_resources$ Upkeep: §R+0.20§!"
+	trait_tec_spore_growth_effect:0 "$tec_identity_trait$\n\nEach pop increases $tec_loc_pop_growth$ on the planet by §G$@trait_tec_spore_growth_rate_tt$%§!\n\n$tec_loc_pops$ $tec_loc_basic_resources$ Upkeep: §R+$@trait_tec_spore_growth_upkeep$§!"
 
 	trait_tec_dual_gametoids:0 "Dual Gametoids"
 	trait_tec_dual_gametoids_desc:0 "§LEvolutionary adaptations made this species produce several mirroring embryos, which led to explosive population growth due to multiple viable offsprings per reproductive cycle.§!"
-	trait_tec_dual_gametoids_effect:0 "$tec_identity_trait$\n\nEach time a pop of this species is §YGenerated§!, there is between a §G10%§! and §G30%§! chance of another pop being §Y£mod_pop_growth_speed£ Created§!, proportional to the number of pops on the planet."
+	trait_tec_dual_gametoids_effect:0 "$tec_identity_trait$\n\nEach time a pop of this species is §YGenerated§!, there is between a §G$@trait_tec_dual_gametoids_low_chance_tt$%§! and §G$@trait_tec_dual_gametoids_high_chance_tt$%§! chance of another pop being §Y£mod_pop_growth_speed£ Created§!, proportional to the number of pops on the planet.\n\n$tec_loc_pops$ $tec_loc_basic_resources$ Upkeep: §R+$@trait_tec_dual_gametoids_upkeep$§!"
 
 	trait_tec_celestial_panspermia:0 "Celestial Panspermia"
 	trait_tec_celestial_panspermia_desc:0 "§LAn anomalous biological development made this species generate a propagation effect when reproducing, manifesting their kind in far away regions or even entire celestial-grade distances, dispersing their genes and generating new life. The mysteries of life, unquestionable as always.§!"
-	trait_tec_celestial_panspermia_effect:0 "$tec_identity_trait$\n\nEach time a pop of this species is §YGenerated§!, there is a §G20%§! chance of a close-by or far-away planet gains a clearable $tec_loc_blocker$, which generates §G1§! biological $tec_loc_pop$ with this trait."
+	trait_tec_celestial_panspermia_effect:0 "$tec_identity_trait$\n\nEach time a pop of this species is §YGenerated§!, there is a §G$@trait_tec_celestial_panspermia_chance_tt$%§! chance of a close-by or far-away planet gains a clearable $tec_loc_blocker$, which generates §G1§! biological $tec_loc_pop$ with this trait."
 
 	d_tec_celestial_organic:0 "Celestial Pod"
 	d_tec_celestial_organic_desc:0 "This strange organic pod is growing by absorbing nearby inert materials and residual energy, life can be sensed thriving on its interior."
