phylogenic + unemployed traits

--- a/localisation/english/replace/!_evolved_to_do_l_english.yml
+++ b/localisation/english/replace/!_evolved_to_do_l_english.yml
@@ -1172,7 +1172,29 @@ TRAIT_TEC_TEST_SCRIPVAR_EFFECT:0 "$tec_test_scripvar_bonus$"
 	trait_tec_robot_minimal_maintenance_desc:0 "§LThe artificial body of these units is able to procedural maintenance protocols, repairing itself with efficiency.§!"
 	trait_tec_robot_minimal_maintenance_effect:0 "TODO TRAIT reduces amenities usage and increases army health"
 
-	# Special
+	# Other
+	trait_tec_phylogenic:0 "Phylogenic Constraints"
+	trait_tec_phylogenic_desc:0 "§LThe necessity of constant inter-member interaction and reproduction leads to lower number of successful propagation unless enough sustainable population is able to exchange genetic data and help with the process.§!"
+	trait_tec_phylogenic_effect:0 "Provides between §R-25%§! and §G+5%§! Pop Growth Speed, inversely proportional to the number of pops on the planet."
+
+	trait_tec_unemployed_opportunistic:0 "Opportunistic Scavenger"
+	trait_tec_unemployed_opportunistic_desc:0 "§LThis species consecreate part of their free time to the obtaining of any riches they can find around.§!"
+	trait_tec_unemployed_opportunistic_effect:0 "$mod_planet_pops_unemployed_minerals_produces_add$: §G+1§!\n\n§HProduction applies to £job_livestock£ $job_livestock_plural$ pops§!"
+
+	trait_tec_unemployed_subsistence:0 "Innate Subsistence"
+	trait_tec_unemployed_subsistence_desc:0 "§LWhen it comes to adquiring substenance, this species tries their best to gather, harvest and collect anything to survive.§!"
+	trait_tec_unemployed_subsistence_effect:0 "$mod_planet_pops_unemployed_food_produces_add$: §G+1§!\n\n§HProduction applies to £job_livestock£ $job_livestock_plural$ pops§!"
+
+	trait_tec_unemployed_subsistence_lithoid:0 "Innate Mineralization"
+	trait_tec_unemployed_subsistence_lithoid_desc:0 "$trait_tec_unemployed_subsistence_desc$"
+	trait_tec_unemployed_subsistence_lithoid_effect:0 "$mod_planet_pops_unemployed_minerals_produces_add$: §G+1§!\n\n§HProduction applies to £job_livestock£ $job_livestock_plural$ pops§!"
+
+
+	trait_tec_TODO:0 "Phylogenic Constraints"
+	trait_tec_TODO_desc:0 "§LTODO.§!"
+	trait_tec_TODO_effect:0 ""
+
+
  # /
 
  # --------------- Robotic
